<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_launcher"
    tools:ignore="RtlSymmetry,ContentDescription,HardcodedText,KeyboardInaccessibleWidget">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/vImgBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_left_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="重置密码"
            android:textColor="#222222"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.lixiaoyun.aike.widget.RoundedImageView
        android:id="@+id/vImgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/glLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:radius="5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <EditText
        android:id="@+id/vEtPsw"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:cursorVisible="true"
        android:digits="@string/rule_password"
        android:hint="@string/retrieve_new_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray_d0d0d0"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/glMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <EditText
        android:id="@+id/vEtPswConfirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:cursorVisible="true"
        android:digits="@string/rule_password"
        android:hint="@string/retrieve_new_tiw_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray_d0d0d0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glMain" />

    <TextView
        android:id="@+id/vTvChangePassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_main_5dp"
        android:gravity="center"
        android:text="@string/login_forget_confirm_button_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vEtPswConfirm"
        app:layout_constraintWidth_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>
